[tool.poetry]
name = "great-expectations-explore"
version = "0.1.0"
description = ""
authors = ["Jitse-Jan <code@jitsejan.com>"]

[tool.poetry.dependencies]
python = ">3.9,<3.11"

[tool.poetry.dev-dependencies]
numpy = "^1.21.4"
pandas = "^1.3.4"
great-expectations = "^0.13.46"
SQLAlchemy = "^1.4.28"
mistune = "0.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
